--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Masahiro111 <33553834+Masahiro111@users.noreply.github.com> (https://github.com/Masahiro111)",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "alpinejs": "^3.3.3",
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
